--- a/style.css
+++ b/style.css
@@ -215,8 +215,8 @@ section a:hover {
   grid-area: hvac;
   max-height: 50%;
   margin: 0;
-  padding-top: 90px;
-  padding-left: 30px;
+  padding-top: 20%;
+  padding-left: 10%;
 }
 
 .joepicture {
