--- a/style.css
+++ b/style.css
@@ -214,6 +214,7 @@ section a:hover {
 .hvac {
   grid-area: hvac;
   max-height: 50%;
+  width: 80%;
   margin: 0;
   padding-top: 20%;
   padding-left: 10%;
